--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@webcomponents/webcomponentsjs@2/webcomponents-loader.min.js"></script>
+    <script type="module" src="https://cdn.jsdelivr.net/npm/@ionic/core/dist/ionic/ionic.esm.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@ionic/core/css/ionic.bundle.css"/>
+    <script nomodule src="https://cdn.jsdelivr.net/npm/@ionic/core/dist/ionic/ionic.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script type="module" src="https://cdn.jsdelivr.net/npm/zero-md@3?register"></script>
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/hack-font@3/build/web/hack.css">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="stylesheet" href="fonts/lato.css">
@@ -16,29 +20,28 @@
     <div class="background">
     <header>
         <nav>
-            <li class="nav-item" id="home">
+            <li class="nav-item" id="home" onclick="page(0)">
                 <ion-icon name="home-outline"></ion-icon>
             </li>
-            <li class="nav-item" id="blog">
+            <li class="nav-item" id="blog" onclick="page(1)">
                 <ion-icon name="create-outline"></ion-icon>
             </li>
-            <li class="nav-item" id="search">
+            <li class="nav-item" id="search" onclick="search()">
                 <ion-icon name="compass-outline"></ion-icon>
             </li>
             <a class="nav-item" href="https://www.instagram.com/air_li_siu4/" id="instagram">
                 <ion-icon name="logo-instagram"></ion-icon>
             </a>
-            <a class="nav-item" href="http://discordapp.com/users/UserID/857240044557041724" id="discord">
-                <ion-icon name="logo-discord"></ion-icon>
+            <a class="nav-item" href="https://github.com/AirLi1507" id="github">
+                <ion-icon name="logo-github"></ion-icon>
             </a>
         </nav>
     </header>
-    <main>
-        <div>1</div>
-    </main>
+    <main></main>
     </div>
     <button id="switch" onclick="switchMode(0)"><ion-icon name="sunny-outline"></ion-icon></button>
     <script src="javascript/page.js"></script>
     <script src="javascript/switch.js"></script>
+    <script src="javascript/ascii-art.js"></script>
 </body>
 </html>
