editing neofetch effect

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     <button id="switch" onclick="switchMode(0)"><ion-icon name="sunny-outline"></ion-icon></button>
     <script src="javascript/page.js"></script>
     <script src="javascript/switch.js"></script>
+    <script src="javascript/effects.js"></script>
     <script src="javascript/ascii-art.js"></script>
 </body>
 </html>
